--- a/src/app/Features/quiz/quiz.component.css
+++ b/src/app/Features/quiz/quiz.component.css
@@ -1,5 +1,6 @@
 .content {
-    height: 85vh;
+    min-height: 85vh;
+    height: auto;
     width: auto;
     background-color:  #faedcd;
     display: flex;
@@ -8,6 +9,7 @@
     .quiz-content {
         background-color:  rgb(114, 121, 162);
         width: 100%;
+        height: inherit;
         display: flex;
         justify-content: center;
 
@@ -16,7 +18,7 @@
             justify-content: center;
             align-items: center;
             flex-direction: row;
-            width: 100%;
+            width: 50%;
 
             .img-title {
                 display: flex;
@@ -46,7 +48,7 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            width: 800px;
+            width: 100%;
             padding: 0 15px 0 15px;
 
             .reason-next {
@@ -72,6 +74,7 @@
                     align-items: center;
                     padding-right: 10px;
                     width: 100%;
+                    height: 100%;
                     color: white;
                     font-size: 25px;
                     font-weight: bold;
@@ -87,7 +90,8 @@
                 .answers {
                     display: flex;
                     flex-direction: column;
-                    padding-right: 10px;
+                    padding: 30px 10px 30px 0px;
+                    height: 100%;
                     width: 100%;
 
                     .quiz-button {
@@ -104,9 +108,10 @@
         
                     .incorrect {
                         background-color: rgb(238, 44, 44);
-                    }
+                    }                    
                 }
             }
         }
     }
+    
 }
